fixed mobile name alignment

--- a/src/App.css
+++ b/src/App.css
@@ -27,17 +27,22 @@ body, html {
   z-index: 2;
 }
 
+.name-container {
+  width: 75%;
+  height: 30%;
+  padding-left: 2em;
+}
+
 /* Flex layout for name */
 .name {
   font-size: 1em;
   text-align: left;
-  width: 75%;
-  height: 30%;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  padding-left: 2em;
   color: #fcececa0;
 }
 
@@ -316,18 +321,30 @@ body, html {
     padding: 5% 0 0 0;
   }
 
-  .name {
+  .name-container {
     height: 85%;
     width: 100vw;
     display: flex;
-    justify-content: flex-end;
     align-items: center;
+    justify-content: center;
     padding: 0 0 25% 0;
+  }
+
+  .name {
+    height: 100%;
+    width: fit-content;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
   }
 
   .firstname {
     padding: 0;
     margin: 0;
+  }
+
+  .lastname {
+    font-weight: 400;
   }
 
   .text-overlay {
